<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textColor="#263238"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />


    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#263238"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/question"
        android:layout_width="353dp"
        android:layout_height="134dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:maxLines="4"
        android:padding="8dp"
        android:scrollbarSize="0dp"
        android:scrollbars="vertical"
        android:text="@string/example"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/buttonTrue"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:background="#212B30"
        android:text="@string/trueValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFalse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/buttonFalse"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:background="#212B30"
        android:text="@string/falseValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTrue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTrue" />

    <Button
        android:id="@+id/scorecard"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_weight="1"
        android:background="#212B30"
        android:text="@string/scorecard"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFalse"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>